[gd_scene load_steps=23 format=3 uid="uid://dgvh2ku6pfa3k"]

[ext_resource type="Script" path="res://animation_controller_offense.gd" id="1_ni7hw"]
[ext_resource type="AnimationLibrary" uid="uid://bsflu54oarakt" path="res://animations/offense_lib.res" id="3_16tud"]
[ext_resource type="Texture2D" uid="uid://nb7t8xgq5g1s" path="res://assets/s1spritesheet.png" id="4_fvc6t"]
[ext_resource type="Texture2D" uid="uid://dmvokd7o5y0ro" path="res://assets/texture_lib/Retro Impact Effect E.png" id="5_dvehu"]
[ext_resource type="Texture2D" uid="uid://g1x46jmpg2r6" path="res://assets/texture_lib/695.png" id="6_2yv0r"]
[ext_resource type="Texture2D" uid="uid://cbatftdp7ab7b" path="res://assets/texture_lib/657.png" id="7_3kkjk"]
[ext_resource type="Texture2D" uid="uid://bkgcqpki1laiq" path="res://assets/texture_lib/Retro Impact Effect A.png" id="8_1i75c"]
[ext_resource type="Texture2D" uid="uid://c8sk8vyotcnne" path="res://assets/texture_lib/coil_hit.png" id="9_mwvoa"]
[ext_resource type="Texture2D" uid="uid://qc2356l4cu7e" path="res://assets/texture_lib/hit_smoke.png" id="17_wln84"]
[ext_resource type="Texture2D" uid="uid://tax7j2ugjl2n" path="res://assets/texture_lib/smoke_poke.png" id="18_81an1"]
[ext_resource type="Texture2D" uid="uid://6nvqj3voivic" path="res://assets/texture_lib/658.png" id="19_q66h7"]
[ext_resource type="Texture2D" uid="uid://c2w7125devutb" path="res://assets/texture_lib/melee_v.png" id="20_2i7nd"]
[ext_resource type="Texture2D" uid="uid://xm5b57q4wwlq" path="res://assets/texture_lib/Retro Impact Effect C.png" id="21_x5r4a"]
[ext_resource type="Texture2D" uid="uid://c1rmlr6haicbm" path="res://assets/texture_lib/Retro Impact Effect F.png" id="22_v7s6m"]
[ext_resource type="Texture2D" uid="uid://dwmqp80q40q7a" path="res://assets/texture_lib/melee_0.png" id="23_03m71"]
[ext_resource type="Texture2D" uid="uid://dp43ufr8a3loa" path="res://assets/texture_lib/678.png" id="24_iabn4"]
[ext_resource type="Texture2D" uid="uid://bxicmvrqj5o21" path="res://assets/texture_lib/651.png" id="25_v6gek"]
[ext_resource type="Texture2D" uid="uid://dlxx35ltxgsat" path="res://assets/texture_lib/temp/663.png" id="26_l84la"]
[ext_resource type="Texture2D" uid="uid://kxq2pwfiob37" path="res://assets/texture_lib/temp/696.png" id="27_knir7"]

[sub_resource type="Curve2D" id="Curve2D_ra0f8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 200, 0)
}
point_count = 2

[sub_resource type="Animation" id="Animation_cxqls"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xj7mx"]
_data = {
"RESET": SubResource("Animation_cxqls")
}

[node name="animation_controller" type="Path2D"]
curve = SubResource("Curve2D_ra0f8")
script = ExtResource("1_ni7hw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xj7mx"),
"offense_lib": ExtResource("3_16tud")
}

[node name="to" type="PathFollow2D" parent="."]
position = Vector2(200, 0)
progress = 200.0

[node name="DEBUG_VIS" type="Sprite2D" parent="to"]
visible = false
texture = ExtResource("4_fvc6t")
hframes = 7
vframes = 3

[node name="rotation" type="Node2D" parent="to"]

[node name="hit_loc" type="Node2D" parent="to/rotation"]
z_index = 1
position = Vector2(-12, 0)

[node name="ranged_p_hit" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
modulate = Color(1, 0.6, 0, 1)
texture = ExtResource("5_dvehu")
hframes = 8
vframes = 24
frame = 12

[node name="ranged_p_smoke1" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
position = Vector2(-4, -14)
rotation = -1.5708
scale = Vector2(0.8, 0.9)
texture = ExtResource("6_2yv0r")
flip_v = true
hframes = 20
vframes = 9
frame = 118

[node name="ranged_p_smoke2" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
position = Vector2(16, 4)
texture = ExtResource("6_2yv0r")
hframes = 20
vframes = 9
frame = 118

[node name="ranged_c_smoke2" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
modulate = Color(1, 1, 1, 0.905882)
position = Vector2(6, 0)
texture = ExtResource("7_3kkjk")
hframes = 16
vframes = 9
frame = 95

[node name="ranged_c_hit" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
position = Vector2(8, 0)
texture = ExtResource("8_1i75c")
hframes = 8
vframes = 24
frame = 87

[node name="ranged_c_smoke" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(6, 0)
texture = ExtResource("7_3kkjk")
hframes = 16
vframes = 9
frame = 127

[node name="coil_hit" type="Sprite2D" parent="to/rotation/hit_loc"]
visible = false
z_index = 1
position = Vector2(-64, 0)
rotation = -1.5708
texture = ExtResource("9_mwvoa")
hframes = 10
frame = 9

[node name="early" type="PathFollow2D" parent="."]
position = Vector2(39.9854, 0)
progress = 40.0

[node name="smoke" type="Sprite2D" parent="early"]
visible = false
z_index = 1
texture = ExtResource("17_wln84")
hframes = 15
vframes = 9
frame = 89

[node name="midpoint" type="PathFollow2D" parent="."]
position = Vector2(69.9926, 0)
progress = 70.0

[node name="rotation" type="Node2D" parent="midpoint"]

[node name="p_smoke" type="Sprite2D" parent="midpoint/rotation"]
visible = false
position = Vector2(0, -6)
texture = ExtResource("18_81an1")
hframes = 5
frame = 4

[node name="v_ring" type="Sprite2D" parent="midpoint/rotation"]
visible = false
z_index = 1
scale = Vector2(0.8, 1)
texture = ExtResource("19_q66h7")
hframes = 16
vframes = 9
frame = 47

[node name="from" type="PathFollow2D" parent="."]

[node name="DEBUG_VIS" type="Sprite2D" parent="from"]
visible = false
texture = ExtResource("4_fvc6t")
flip_h = true
hframes = 7
vframes = 3
frame = 13

[node name="rotation" type="Node2D" parent="from"]

[node name="emission" type="Node2D" parent="from/rotation"]
position = Vector2(18, 0)

[node name="melee_v" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(-12, -6)
texture = ExtResource("20_2i7nd")
flip_v = true
hframes = 5
vframes = 2
frame = 9

[node name="melee_v_hit_1" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(42, 0)
rotation = 0.523599
texture = ExtResource("21_x5r4a")
flip_h = true
flip_v = true
hframes = 8
vframes = 24
frame = 111

[node name="melee_v_hit2" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(16, -55)
rotation = -0.523599
texture = ExtResource("5_dvehu")
hframes = 8
vframes = 24
frame = 103

[node name="melee_p_hit" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(40, -14)
rotation = 0.785398
texture = ExtResource("22_v7s6m")
hframes = 8
vframes = 24
frame = 4

[node name="melee_p" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(-16, -16)
rotation = -0.523599
texture = ExtResource("23_03m71")
hframes = 5
vframes = 2
frame = 7

[node name="ranged_pc_flash" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(32, 0)
texture = ExtResource("8_1i75c")
hframes = 8
vframes = 24
frame = 28

[node name="coil" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(0, -2)
texture = ExtResource("24_iabn4")
hframes = 17
vframes = 9
frame = 50

[node name="coil1" type="Sprite2D" parent="from/rotation/emission"]
visible = false
texture = ExtResource("25_v6gek")
hframes = 14
vframes = 9
frame = 41

[node name="missile_smoke1" type="Sprite2D" parent="from/rotation/emission"]
position = Vector2(-40, -8)
rotation = -1.91986
texture = ExtResource("26_l84la")
hframes = 16
vframes = 9
frame = 95

[node name="missile_smoke0" type="Sprite2D" parent="from/rotation/emission"]
visible = false
position = Vector2(-4, -24)
rotation = 1.22173
texture = ExtResource("27_knir7")
hframes = 18
vframes = 9
frame = 107

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
